style : Feature, Infos 공통 스타일

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           </div>
         </div>
 
-        <div class="arcade">
+        <div class="arcade feature">
           <div class="figures">
             <figure>
               <img
@@ -180,17 +180,49 @@
               </figcaption>
             </figure>
           </div>
-          <p>
-            A13 Bionic 칩이 메시지 전송, 인터넷 서핑, 여러 앱 동시에 사용하기 등
-            모든 작업에 탁월한 반응성을 더해줍니다.
-          </p>
-          <p class="description">
-            빠른 속도의 GPU로 뛰어난 그래픽 성능을 선사합니다. 몰입감 넘치는
-            게임 등 더 많은 것을 즐기는 데 안성맞춤이죠.
-          </p>
+          <div class="infos infos--center">
+            <div class="info">
+              <div class="icon"></div>
+              <p>
+                A13 Bionic 칩이 메시지 전송, 인터넷 서핑, 여러 앱 동시에
+                사용하기 등 모든 작업에 탁월한 반응성을 더해줍니다.
+              </p>
+            </div>
+            <div class="info">
+              <div class="icon"></div>
+              <p>
+                빠른 속도의 GPU로 뛰어난 그래픽 성능을 선사합니다. 몰입감 넘치는
+                게임 등 더 많은 것을 즐기는 데 안성맞춤이죠.
+              </p>
+            </div>
+          </div>
         </div>
 
-        <div class="create">
+        <div class="create feature">
+          <div class="infos info--end">
+            <div class="info">
+              <div class="icon"></div>
+              <p>
+                더욱 강력해진 Neural Engine이 iPadOS의 ‘라이브 텍스트’와 같은
+                머신 러닝 기반 기능을 구현해줍니다.
+              </p>
+            </div>
+            <div class="info">
+              <div class="icon"></div>
+              <p>
+                A13 Bionic 칩은 Adobe Fresco, Procreate과 같은 첨단 앱도 거뜬히
+                구동합니다.
+              </p>
+            </div>
+            <div class="info">
+              <div class="icon"></div>
+              <p>
+                온종일 가는 배터리를 갖춘 iPad. 당신이 열공 모드일 때도, 게임
+                삼매경에 빠져 있을 때도 늘 함께할 준비가 되어 있습니다.1
+              </p>
+            </div>
+          </div>
+
           <div class="figures">
             <figure>
               <img
@@ -202,19 +234,6 @@
               </figcaption>
             </figure>
           </div>
-          <p>
-            더욱 강력해진 Neural Engine이 iPadOS의 ‘라이브 텍스트’와 같은 머신
-            러닝 기반 기능을 구현해줍니다.
-          </p>
-          <p>
-            A13 Bionic 칩은 Adobe Fresco, Procreate과 같은 첨단 앱도 거뜬히
-            구동합니다.
-          </p>
-          <p>
-            온종일 가는 배터리를 갖춘 iPad. 당신이 열공 모드일 때도, 게임
-            삼매경에 빠져 있을 때도 늘 함께할 준비가 되어 있습니다.1
-          </p>
-          t
         </div>
       </div>
     </section>
