--- a/index.html
+++ b/index.html
@@ -676,7 +676,44 @@
 
     <!-- AR -->
     <section class="ar">
-      <div class="inner"></div>
+      <div class="whitebox">
+        <div class="inner">
+          <div>
+            <img class="icon" src="./images/ar_icon.png" alt="AR Icon" />
+            <h1>
+              AR로 iPad<br />
+              미리 보기.
+            </h1>
+            <p>iPhone 또는 iPad에서 이 페이지를 Safari로 열어보세요.</p>
+          </div>
+
+          <div><img src="./images/ar_ipad.jpg" alt="AR Image" /></div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Environment -->
+    <section class="environment">
+      <div class="whitebox">
+        <div class="inner">
+          <img
+            class="icon"
+            src="./images/environment_icon.png"
+            alt="Environment Icon"
+          />
+          <h1>환경</h1>
+          <p>
+            Apple은 탄소 중립을 실천하고 있습니다. 그리고 2030년까지 우리의 모든
+            제품 역시 이 목표를 달성할 것입니다. 우리는 모든<br />
+            Apple 제품과 포장재에 100% 재활용 및 재생 가능 소재만을 사용하고,
+            모든 것을 탄소 발자국을 남기지 않고 청정 에너지로<br />
+            생산하는 그날을 위해 헌신적인 노력을 기울이고 있습니다.
+          </p>
+          <a href="javascript:void(0)" class="link"
+            >Apple과 환경에 대해 더 알아보기</a
+          >
+        </div>
+      </div>
     </section>
 
     <!-- Accessory Shop & Trade -->
