feat : iPad Compare section data rendering

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     />
 
     <link rel="stylesheet" href="./css/main.css" />
-    <script defer src="./js/main.js"></script>
+    <script defer type="module" src="./js/main.js"></script>
   </head>
   <body>
     <!-- Header -->
@@ -752,6 +752,61 @@
       </div>
     </section>
 
-    <!-- iPad - Compare -->
+    <!-- Compare -->
+    <section class="compare">
+      <div class="whitebox">
+        <div class="inner">
+          <h1>당신에게 맞는 iPad는?</h1>
+          <div class="items">
+            <!-- JS -->
+          </div>
+          <div class="links">
+            <a href="javascript:void(0)" class="link"
+              >모든 iPad 모델 비교하기</a
+            >
+            <a href="javascript:void(0)" class="link">iPad 쇼핑하기</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+      <div class="inner">
+        <!-- Buystrip -->
+        <section class="buystrip">
+          <div class="inner">
+            <section class="buystrip-info--shipping">
+              <div>
+                <a href="javascript:void(0)" class="link"
+                  >더 알아보기
+                  <figure></figure>
+                  <h3>업무일 기준 무료 익일 배송</h3>
+                  <p>
+                    오후 3시 이전에 주문된<br />
+                    재고 보유 제품에 한합니다. 더 알아보기
+                  </p>
+                </a>
+              </div>
+            </section>
+
+            <section class="buystrip-info--shipping">
+              <div>
+                <a href="javascript:void(0)" class="link">더 알아보기</a>
+              </div>
+            </section>
+
+            <section class="buystrip-info--shipping">
+              <div>
+                <a href="javascript:void(0)" class="link">더 알아보기</a>
+              </div>
+            </section>
+          </div>
+        </section>
+
+        <!-- Footnotes -->
+        <section></section>
+      </div>
+    </footer>
   </body>
 </html>
