--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@
               <div class="icon icon--battery"></div>
               <p>
                 온종일 가는 배터리를 갖춘 iPad. 당신이 열공 모드일 때도, 게임
-                삼매경에 빠져 있을 때도 늘 함께할 준비가 되어 있습니다.1
+                삼매경에 빠져 있을 때도 늘 함께할 준비가 되어 있습니다.
+                <sup><a href="#footnote1">1</a></sup>
               </p>
             </div>
           </div>
@@ -399,7 +400,7 @@
               <div class="icon icon--lte"></div>
               <p>
                 Gigabit급 LTE 덕분에 Wi-Fi에 연결할 수 없는 경우에도 온라인
-                접속이 가능합니다.2
+                접속이 가능합니다. <sup><a href="#footnote2">2</a></sup>
               </p>
               <a href="javascript:void(0)" class="link"
                 >셀룰러에 대해 더 알아보기</a
@@ -449,6 +450,7 @@
               Apple Pencil은 실제 펜으로 종이에 쓰듯 자연스러운 느낌을
               선사합니다. 그뿐만 아니라 당신의 손글씨를 키보드로 입력한
               텍스트만큼이나 강력하게 만들어줄 수 있는 역량까지 갖추었죠.
+              <sup><a href="#footnote3">3</a></sup>
             </p>
           </div>
           <div class="info">
@@ -739,7 +741,7 @@
         <div class="inner">
           <h1>
             사용하던 iPad를 보상 판매하면 새 모델<br />
-            구매 시 쓸 수 있는 크레딧이.
+            구매 시 쓸 수 있는 크레딧이.<sup><a href="#footnote*">*</a></sup>
           </h1>
           <p>
             Apple Trade In을 통해 보상 판매 대상 iPad를 새 iPad 구매 시 쓸 수
@@ -773,39 +775,104 @@
     <!-- Footer -->
     <footer>
       <div class="inner">
-        <!-- Buystrip -->
-        <section class="buystrip">
-          <div class="inner">
-            <section class="buystrip-info--shipping">
-              <div>
-                <a href="javascript:void(0)" class="link"
-                  >더 알아보기
-                  <figure></figure>
-                  <h3>업무일 기준 무료 익일 배송</h3>
-                  <p>
-                    오후 3시 이전에 주문된<br />
-                    재고 보유 제품에 한합니다. 더 알아보기
-                  </p>
-                </a>
-              </div>
-            </section>
-
-            <section class="buystrip-info--shipping">
-              <div>
-                <a href="javascript:void(0)" class="link">더 알아보기</a>
-              </div>
-            </section>
-
-            <section class="buystrip-info--shipping">
-              <div>
-                <a href="javascript:void(0)" class="link">더 알아보기</a>
-              </div>
-            </section>
+        <!-- Buy Info -->
+        <div class="buy-info">
+          <div>
+            <img
+              class="icon"
+              src="./images/buy-info-box.svg"
+              alt="무료 익일 배송 Icon"
+            />
+            <h3>업무일 기준 무료 익일 배송</h3>
+            <p>
+              오후 3시 이전에 주문된<br />
+              재고 보유 제품에 한합니다.
+            </p>
+            <a href="javascript:void(0)" class="link">더 알아보기</a>
           </div>
-        </section>
+          <div>
+            <img
+              class="icon"
+              src="./images/buy-info-won.svg"
+              alt="금융 혜택 Icon"
+            />
+            <h3>금융 혜택</h3>
+            <p>
+              무이자 할부를 통해 Apple 제품을<br />
+              부담 없이 구매하실 수 있습니다.
+            </p>
+            <a href="javascript:void(0)" class="link">더 알아보기</a>
+          </div>
+          <div>
+            <img
+              class="icon"
+              src="./images/buy-info-engrave.svg"
+              alt="각인 Icon"
+            />
+            <h3>진정 자신만의 것으로</h3>
+            <p>
+              자신의 이름이나 개성 있는 문구를 iPad에<br />
+              무료로 각인할 수 있습니다.<br />
+              오직 Apple에서만.
+            </p>
+            <a href="javascript:void(0)" class="link">더 알아보기</a>
+          </div>
+        </div>
 
-        <!-- Footnotes -->
-        <section></section>
+        <div class="warning">
+          <ul>
+            <li id="footnote*">
+              * 보상 판매 금액은 보상 판매 대상이 되는 제품의 상태, 연도, 구성에
+              따라 달라집니다. 일부 기기는 보상 판매 대상이 아닙니다. 크레딧
+              또는 Apple Store Gift Card로 보상 판매를 받으려면 19세 이상이어야
+              합니다. 보상 판매<br />
+              금액은 적용 가능한 새 기기 구입 시 적용하거나 Apple Store Gift
+              Card로 받을 수 있습니다. 최종 확정 금액은 보상 판매 대상 기기를
+              수령한 후, 예상 금액 산정 시 제시한 기기의 설명과 일치하는지 비교
+              검수 후 정해집니다. 부가세는 새로 구입한 기기의 총액을 바탕으로
+              부과됩니다. 일부 매장에서는 보상 판매를 제공하지 않으며, 매장 내
+              보상 판매와 온라인 보상 판매 프로그램 간 내용에 차이가 있을 수
+              있습니다. 컴퓨터 제품에 대해서는 매장 내 보상 판매를 제공하지
+              않습니다. 일부 매장은 추가 요구 사항이 있을 수 있습니다. Apple
+              또는 보상 판매 파트너사는 어떤 보상 판매도 거래를 거부하거나, 보상
+              판매 수량을 제한할 권리를 보유합니다. 적용 가능 기기의 보상 판매
+              및 재활용에 대한 자세한 내용은 Apple의 보상 판매 파트너사에서
+              확인할 수 있습니다. 규제 및 제한이 적용될 수 있습니다. 보상 판매
+              프로그램은 Apple의 파트너이자 독립적으로 운영되는 제3의 업체에
+              의해 제공됩니다. Apple 및 Apple의 계열사는 고객과 파트너 간 계약의
+              당사자가 아닙니다.
+            </li>
+          </ul>
+          <ol>
+            <li id="footnote1">
+              배터리 사용 시간은 사용 패턴 및 설정에 따라 다를 수 있습니다.
+              자세한 내용은
+              <a href="https://apple.com/kr/batteries" target="_blank">
+                apple.com/kr/batteries</a
+              >를 참고하십시오.
+            </li>
+            <li id="footnote2">
+              데이터 요금제에 가입해야 합니다. Gigabit급 LTE는 일부 국가에서
+              일부 이동통신사를 통해 사용 가능합니다. 속도는 이론적 처리량에
+              근거한 수치이며 장소 및 이동통신사에 따라 다를 수 있습니다. LTE
+              지원에 대한 자세한 내용은 이동통신사에 문의하거나
+              <a href="https://apple.com/kr/ipad/cellular" target="_blank"
+                >apple.com/kr/ipad/cellular</a
+              >
+              를 참고하십시오
+            </li>
+            <li id="footnote3">
+              Apple Pencil(1세대) 및 Smart Keyboard는 별도로 판매됩니다.
+            </li>
+          </ol>
+          <ul>
+            <li>
+              앱은 App Store에서 다운로드할 수 있습니다. 각 앱의 출시 여부는
+              변경될 수 있습니다.
+            </li>
+            <li>액세서리는 별도로 판매되며, 판매는 재고에 한합니다.</li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
