--- a/index.html
+++ b/index.html
@@ -873,6 +873,12 @@
             <li>액세서리는 별도로 판매되며, 판매는 재고에 한합니다.</li>
           </ul>
         </div>
+
+        <div class="breadcrumbs">
+          <a href="javascript:void(0)" class="apple-logo bgtext">Apple</a>
+          <a href="javascript:void(0)">iPad</a>
+          <a href="javascript:void(0)">iPad 10.2</a>
+        </div>
       </div>
     </footer>
   </body>
