--- a/index.html
+++ b/index.html
@@ -879,6 +879,10 @@
           <a href="javascript:void(0)">iPad</a>
           <a href="javascript:void(0)">iPad 10.2</a>
         </div>
+
+        <div class="navigations">
+          <!-- JS -->
+        </div>
       </div>
     </footer>
   </body>
